# mofumofu-ui/src/lib/api/types.ts
@@ -49,6 +49,7 @@ export type CreatePostRequest = components['schemas']['CreatePostRequest'];
 export type UpdatePostRequest = components['schemas']['UpdatePostRequest'];
 export type UploadPostImageResponse = components['schemas']['UploadPostImageResponse'];
 export type CursorDirection = components['schemas']['CursorDirection'];
+export type PostFeedItem = components['schemas']['PostFeedItem'];
 export type PostFeedResponse = components['schemas']['PostFeedResponse'];
 export type PostSortOrder = components['schemas']['PostSortOrder'];
 
